corrections to SJIS symbols, bugged message hiding and wrapped textarea

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -14,6 +14,9 @@ a:active{
 	color: blue;
 	text-decoration: none;
 }
+a.menua{
+	text-decoration: underline;
+}
 table{
 	background-color: white;
 	color: black;
